--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@ a.get("micael asiak");
             <hr/>
 
             <div class="row">
-                <div class="span4" id="example">
+                <div class="span3" id="example">
                     <h2>Example</h2>
                     <input type="search" placeholder="Type misspelled state" id="example"/>
                     <ul id="results">
                     </ul>
                 </div>
-                <div class="span8">
+                <div class="span9">
                 <h2>Theory of Operation</h2>
 
                 <h3>Adding to the data structure</h3>
@@ -187,6 +187,11 @@ a.get("micael asiak");
                 distance</a> (so that we handle transpositions), and return based on that.</p>
                 <p>In the event that none of the trigrams matched, we try the whole thing again with bigrams (note though that if there are no matches,
                 the failure to match will be quick). Bigram searching will always be slower because there will be a much larger set to order.</p>
+
+                <br />
+                <h2>For a UI to try your own examples, check out the <a href="viz/">debugging interface</a>.</h2>
+
+                <iframe src="viz/index.html" style="width: 100%; height: 1000px;"></iframe>
                 </div>
             </div>
 
