--- a/viz/index.html
+++ b/viz/index.html
@@ -90,6 +90,16 @@
                 color: #999;
                 text-decoration: line-through;
             }
+            thead th, .header th {
+                background-color: #ddd;
+                padding-bottom: 3px !important;
+                padding-top: 3px !important;
+                text-align: left;
+                border-bottom: 1px solid #999;
+                font-variant: small-caps;
+                font-family: Helvetica, sans-serif;
+            }
+
 
         </style>
         <!-- <link href="" rel="stylesheet"> -->
@@ -379,8 +389,14 @@
                                     React.createElement('div', {id: 'matchDict'}, [
                                             React.createElement('h3', null, 'fuzzyset.matchDict'),
                                             React.createElement('p', {style: {width: 200, lineHeight: 1.3}}, 'Hover over each number to see a description of what that number means.'),
-                                            React.createElement('table', null,
-                                                React.createElement('tbody', null,
+                                            React.createElement('table', null, [
+                                                React.createElement('thead', null, 
+                                                    React.createElement('tr', {className: 'header'}, [
+                                                        React.createElement('th', null, 'gram'),
+                                                        React.createElement('th', {style: {paddingLeft: 10}}, '(item #, gram count)'),
+                                                    ])
+                                                ),
+                                                React.createElement('tbody', null, [
                                                 _.map(fuzzyset.matchDict, (indexAndCounts, gram) => {
                                                     return indexAndCounts.map((indexAndCount, i) => {
                                                         var first_cell = React.createElement('td', {key: i+gram+1}, '   ');
@@ -410,7 +426,9 @@
                                                     }
                                                 )
                                             })
+                                            ]
                                             )
+                                            ]
                                             ) 
                                         ]
                                     ),
@@ -423,6 +441,12 @@
                                                             React.createElement('th', null, gramSize+'-grams: '),
                                                             React.createElement('td', null),
                                                         ]),
+                                                        React.createElement('tr', {className: 'header'},[
+                                                            React.createElement('th', {style: {paddingLeft: 3}}, '#'),
+                                                            React.createElement('th', {style: {paddingLeft: 3}}, '(vector magnitude,'),
+                                                            React.createElement('th', {style: {paddingLeft: 8}}, 'normalized entry)'),
+                                                        ]
+                                                        ),
                                                         _.map(pairs, (pair, i) => {
                                                             var split_pair = [];
                                                             if (this.state.highlightedGram && this.state.highlightedItemIndex === i) {
@@ -456,10 +480,23 @@
                                     ),
                                     React.createElement('div', {id: 'exactSet'}, [
                                         React.createElement('h3', null, 'fuzzyset.exactSet'),
-                                        React.createElement(Table, {obj: fuzzyset.exactSet})
-                                        // _.map(fuzzyset.exactSet, entry => {
-                                        //     return React.createElement('p', null, entry)
-                                        // })
+                                        React.createElement('table', null, [
+                                            React.createElement('thead', null,
+                                                React.createElement('tr', null, [
+                                                    React.createElement('th', null, 'normalized entry'),
+                                                    React.createElement('th', {style: {paddingLeft: 15}}, 'original entry')
+                                                ])
+                                            ),
+                                            React.createElement('tbody', null,
+                                                _.map(fuzzyset.exactSet, (original_entry, normalized_entry) => {
+                                                    return React.createElement('tr', null, [
+                                                        React.createElement('td', null, normalized_entry),
+                                                        React.createElement('td', {style: {paddingLeft: 15}}, original_entry)
+                                                    ])
+                                                })
+                                            )
+
+                                        ] ),
                                         ]
                                     ),
                                 ])
