don't specify a protocol so the website's example can work in both http and https

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ a.get("micael asiak");
 
         </div> <!-- /container -->
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
         <script src="site/js/vendor/bootstrap.min.js"></script>
 
